fix: toaster wrapper overlapping having aditional section after <main>

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -159,7 +159,7 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground max-h-screen min-h-screen w-screen h-screen overflow-hidden;
   }
 
   main {
